@@ -16,6 +16,8 @@ PHP                                                                        NEWS
     property. (ilutov)
   . Fixed bug GH-15693 (Unnecessary include in main.c bloats binary).
     (nielsdos)
+  . Fixed bug GH-15718 (Segfault on ReflectionProperty::get{Hook,Hooks}() on
+    dynamic properties). (DanielEScherzer)
 
 - DOM:
   . Fixed bug GH-13988 (Storing DOMElement consume 4 times more memory in
